test/library/standard/GMP/elliot/check-gmp-none-compiler-error.good
check-gmp-none-compiler-error.chpl:2: error: Cannot use GMP with CHPL_GMP=none
