test/library/standard/GMP/elliot/check-gmp-none-compiler-error.compopts
--gmp=none -srawGMP=true
--gmp=none -srawGMP=false
